package edu.univalle.gadim.virtual_lab_platform.users.api.type;

public enum UserStatus {
    ACTIVE,
    INACTIVE
}
